# Kanban-Studio

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md
.claude/: settings.local.json
backend/: AGENTS.md  ai.py  auth.py  database.py  kanban.db  main.py  models.py  pyproject.toml
backend/auth/: __init__.py  middleware.py  tokens.py
backend/data/: kanban.db
backend/models/: __init__.py  ai_chat.py  board.py
backend/routers/: ai.py  auth.py  board.py
backend/tests/: test_ai.py  test_board.py
data/: kanban.db
docs/: DATABASE.md  PLAN.md  code_review.md  schema.json
frontend/: AGENTS.md  next.config.ts  pnpm-lock.yaml
frontend/src/app/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: AISidebar.test.tsx  AISidebar.tsx  AuthGuard.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx
frontend/src/lib/: api.test.ts  api.ts  auth.test.ts  auth.ts  kanban.test.ts
frontend/tests/: auth.spec.ts  kanban.spec.ts
scripts/: dev.bat  stop.bat  stop.sh
