[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "openai>=2.33.0",
    "uvicorn[standard]>=0.46.0",
]

[dependency-groups]
dev = ["pytest>=9.0.3"]
